--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,6 +37,7 @@ main {
     color: #fff;
     border-radius: 5px;
     margin-bottom: 40px;
+    width: 80%; 
 }
 
 .logo h1 span {
@@ -141,6 +142,7 @@ p {
     }   
 
     .logo h1 {
-         font-size: 16px; 
+         width: 90%; 
+         font-size: 17px; 
     }
 }
